Scroll auto for viewer to avoid showing scrollbar when useless

--- a/src/cnb-editor/cnb-editor-pdf/cnb-editor-pdf.component.css
+++ b/src/cnb-editor/cnb-editor-pdf/cnb-editor-pdf.component.css
@@ -1,7 +1,7 @@
 .viewer {
 	display: block;	
 	max-height: 100%;
-	overflow: scroll;
+	overflow: auto;
 }
 
 :host /deep/ .ng2-pdf-viewer-container {
